# riftless

./: PRD_RIFTLESS.md  README.md  index.html  metadata.json  package.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  changes.py  health.py  risk.py  runs.py  validations.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/integrations/datahub/: __init__.py  config.py  initialization.py  mcp_protocol.py  search_contract.py  transport.py  (+2 more)
backend/app/schemas/: __init__.py  advisory.py  changes.py  common.py  datahub_context.py  dbt_validation.py  deepseek_advisory.py  duckdb_validation.py  risk.py  run_validation.py  runs.py  sql_validation.py  validation.py  validation_api.py  validation_plan.py
backend/app/services/: __init__.py  advisory_artifacts.py  advisory_context_builder.py  change_intake.py  datahub_context_artifacts.py  dbt_parse_validator.py  deepseek_http_transport.py  deepseek_prompt_builder.py  deepseek_provider_config.py  deepseek_provider_execution.py  deepseek_response_parser.py  duckdb_rename_validator.py  risk_engine.py  run_orchestrator.py  sql_parse_validator.py  validation_engine.py  validation_orchestrator.py
backend/app/utils/: __init__.py  advisory_fingerprint.py  controlled_dbt_project.py  datahub_fingerprint.py  fingerprint.py  sql_identifiers.py
backend/tests/: __init__.py  conftest.py  test_advisory_context_builder.py  test_advisory_contracts.py  test_advisory_run_integration.py  test_change_intake.py  test_config.py  test_contracts.py  test_datahub_context_contracts.py  test_datahub_mcp_config.py  test_datahub_mcp_initialization.py  test_datahub_mcp_protocol.py  test_datahub_mcp_search_contract.py  test_datahub_mcp_search_execution.py  test_datahub_mcp_tool_discovery.py  test_datahub_mcp_transport.py  test_dbt_parse_validator.py  test_deepseek_advisory_boundary.py  test_deepseek_provider_execution.py  test_duckdb_rename_validator.py  test_errors.py  test_health.py  test_risk_evaluate.py  test_runs_analyze.py  test_sql_parse_validator.py  test_validation_contracts.py  test_validation_execute_api.py  test_validation_orchestrator.py
(+32 files in other folders)
