[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riftless-backend"
version = "0.1.0"
description = "Backend control-plane foundation for RIFTLESS (phases F4.1–F4.2)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RIFTLESS contributors" }]
keywords = ["riftless", "fastapi", "control-plane"]

# Runtime dependencies for the foundation only.
# No database, AI provider, DataHub, GitHub, auth, or observability packages.
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
# Development / test extras — kept separate from runtime.
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
